# ISR_super_resolution

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  client.py  docker-compose.yml  gan.py  main.py  psnr.py  pyproject.toml  requirements.txt  start.py
ISR/models/: rdn.py  rrdn.py
dto/: upload.dto.py  upload.py
img/: README.md
lib/: client.py  run.py
models/psnr_large/: README.md
models/psnr_small/: README.md
results/: README.md
results/gan/: README.md
results/isr/: README.md
sr_models/gan/: README.md
sr_models/noise_cancel/: README.md
test/: gan.py  psnr.py
video/: README.md
video_results/: README.md
