[tool.poetry]
name = "isr-super-resolution"
version = "0.1.0"
description = ""
authors = ["donghquinn <ehdgus1524@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9"
torchvision = "0.16.0"
torch = "2.1.0"
numpy = "1.26.2"
pandas = "2.1.3"
tensorflow = "2.15.0"
h5py = "3.10.0"
minio = "7.1.16"
python-dotenv = "1.0.0"
opencv-python = "4.8.1.78"
pqdm = "0.2.0"

[build-system]
requires = ["poetry-core==1.7.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
